--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </button>
               </a>
 
-              <!-- <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
+              <!-- <a href="https://www.linkedin.com/in/mengru-wang-426054157/" target="_blank">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
