--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Open Varad's Resume in a new tab"
-          href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
+        <a aria-label="Open Mengru's Resume in a new tab"
+          href="https://drive.google.com/drive/u/0/my-drive" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
@@ -219,25 +219,12 @@
                   <i class="fa fa-linkedin"></i>
                 </button>
               </a>
-              <a href="https://github.com/varadbhogayata/" target="_blank">
+              <a href="https://github.com/marinaishere" target="_blank">
                 <button class="icon-btn github">
                   <i class="fa fa-github"></i>
                 </button>
               </a>
 
-              <a href="https://angel.co/u/varad_bhogayata" target="_blank">
-                <button class="icon-btn angellist">
-                  <i class="fa fa-angellist"></i>
-                </button>
-              </a>
-
-              <!-- <a href="https://www.linkedin.com/in/mengru-wang-426054157/" target="_blank">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-
-                  </span>
-              </a> -->
             </div>
             <div class='buttons'>
               <a href="#about" class="readme">Read More</a>
@@ -259,7 +246,7 @@
           </h2>
         </blockquote> -->
         <p>
-          I am a Computer Science Grad Student at Arizona State University. 
+          I am a Computer Science Grad Student at the University of Texas at Dallas. 
         </p>
         <p>
           
