--- a/index.html
+++ b/index.html
@@ -952,29 +952,29 @@
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
+          <a aria-label="Call Mengru" data-position="top" data-tooltip="Call Varad"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+14805722456</a></a>
+              aria-label="Call Varad">+214-460-9732</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+          <a aria-label="Email Mengru" href="mailto:wmr.marina@gmail.com" target="_blank" data-position="top"
+            data-tooltip="Email Mengru" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
               class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+              class="hoverline">wmr.marina@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View Mengru on GitHub" href="http://github.com/marinaishere" target="_blank"
+            data-position="top" data-tooltip="View Mengru on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
-              target="_blank">github.com/varadbhogayata</a></a>
+              aria-label="Mengru on Github" href="http://github.com/marinaishere" class="hoverline"
+              target="_blank">github.com/marinaishere</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/mengru-wang-426054157/" target="_blank"
+            data-position="top" data-tooltip="View Mengru on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
-              class="hoverline" target="_blank">linkedin.com/in/varadbhogayata</a></a>
+              class="fa fa-linkedin"></i><a aria-label="Mengru on LinkedIn" href="http://linkedin.com/in/mengru-wang-426054157/"
+              class="hoverline" target="_blank">linkedin.com/in/mengru-wang-426054157/</a></a>
         </p>
       </div>
     </section>
