--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <meta property="og:title" content="Mengru Wang | Software Developer" />
   <meta property="og:description" content="Software Developer" />
   <meta property="og:url" content="https://marinaishere.github.io/" />
-  <meta property="og:site_name" content="Varad Bhogayata | Software Developer" />
+  <meta property="og:site_name" content="Mengru Wang | Software Developer" />
   <meta property="article:publisher" content="https://marinaishere.github.io/" />
   <meta property="og:image" content="https://marinaishere.github.io/examples/preview.JPG" />
   <!-- Twitter -->
@@ -46,7 +46,7 @@
   <meta name="twitter:site" content="@marinaishere" />
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
   <meta name="twitter:description" content="Software Developer" />
-  <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
+  <meta name="twitter:url" content="https://twitter.com/marinaishere717" />
   <meta name="author" content="marinaishere" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
@@ -147,7 +147,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Varad's resume in a new tab" href="https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing" target="_blank"
+        <a aria-label="Open Mengru's resume in a new tab" href="https://drive.google.com/file/d/1RKBjlM9sG8LNeicuzO8VsWcD035xLD97/view?usp=sharing" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -214,7 +214,7 @@
               <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
             </div>
             <div class="social">
-              <a href="https://www.linkedin.com/in/mengru-wang-426054157/" target="_blank">
+              <a href="https://www.linkedin.com/in/marinaishere/" target="_blank">
                 <button class="icon-btn linkedin">
                   <i class="fa fa-linkedin"></i>
                 </button>
@@ -954,12 +954,12 @@
         <p>
           <a aria-label="Call Mengru" data-position="top" data-tooltip="Call Varad"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+214-460-9732</a></a>
+              aria-label="Call Mengru">+214-460-9732</a></a>
         </p>
         <p>
           <a aria-label="Email Mengru" href="mailto:wmr.marina@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email Mengru" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
+              class="fa fa-envelope"></i><a aria-label="Email Mengru" href="mailto:wmr.marina@gmail.com"
               class="hoverline">wmr.marina@gmail.com</a></a>
         </p>
         <p>
@@ -970,11 +970,11 @@
               target="_blank">github.com/marinaishere</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/mengru-wang-426054157/" target="_blank"
+          <a aria-label="View Mengru on LinkedIn" href="http://linkedin.com/in/mengru-wang-426054157/" target="_blank"
             data-position="top" data-tooltip="View Mengru on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
               class="fa fa-linkedin"></i><a aria-label="Mengru on LinkedIn" href="http://linkedin.com/in/mengru-wang-426054157/"
-              class="hoverline" target="_blank">linkedin.com/in/mengru-wang-426054157/</a></a>
+              class="hoverline" target="_blank">linkedin.com/in/marinaishere/</a></a>
         </p>
       </div>
     </section>
